# DrawExperiments

./: .gitignore  CMakeLists.txt  Tasks.txt  abstractclient.h  abstractplayer.h  contagion.pro  defs.cpp  defs.h  game.cpp  game.h  gameproxy.cpp  gameproxy.h  gamesession.cpp  gamesession.h  gamestate.cpp  gamestate.h  guessresponse.cpp  guessresponse.h  guiclient.cpp  guiclient.h  guiplayer.cpp  guiplayer.h  humanitem.cpp  humanitem.h  main.cpp  mainwindow.cpp  mainwindow.h  moderator.cpp  moderator.h  randomclient.cpp  randomclient.h  randomplayer.cpp  randomplayer.h  server.cpp  server.h  utils.h
